# agentic_workflow

./: .gitignore  CODEEXECUTOR_SUMMARY.md  EXECUTION_GUIDE.md  PROJECT_ANALYSIS.md  QUICKSTART.md  README.md  all_agents.py  debug_workflow.py  demo_code_executor.py  demo_patterns.py  pyproject.toml  requirements.txt  run_demo.sh  test_interactive_eventbus.py  test_planner_demo.py
prompts/: answer_with_context.md  approval_request.md  biz_writer.md  code_executor.md  critic_agent.md  eval_judge.md  final_summarizer.md  model_router.md  moderation.md  plan.md  prompt_agent.md  prompt_switcher.md  query_rewriter.md  switch_agent.md  tech_writer.md  writer_bullets.md  writer_paragraph.md
prompts/planner/: decomposer.md  detailer.md  evaluator.md  merger.md  refiner.md  summarizer.md
src/UNKNOWN.egg-info/: SOURCES.txt  top_level.txt
src/agents/: approval_gate.py  code_executor_agent.py  critic_agent.py  echo.py  executor_agent.py  fanout_agent.py  guardrails_agent.py  join_agent.py  model_router.py  model_selector.py  planner_agent.py  prompt_agent.py  prompt_switcher.py  query_rewriter.py  rag_retriever.py  switch_agent.py  tool_runner.py  updater_agent.py
src/app/: flow_planner_coder.py  flows.py  flows_planner.py  flows_retries.py  flows_tools.py  main.py
src/config/: settings.py
src/core/: agent.py  event_bus.py  types.py  utils.py  workflow_manager.py
src/eval/: evaluation.py  metrics.py
src/guardrails/: guardrails.py
src/memory/: __init__.py  embeddings.py  memory_manager.py  (+2 more)
tests/: test_code_executor_agent.py  test_critic_agent.py  test_demo_code_executor.py  test_eventbus_settings.py  test_flow_planner_coder.py  test_flows_helpers.py  test_flows_planner.py  test_llmagent_ollama_default.py  test_memory_components.py  test_multiple_planning.py  test_parallelization.py  test_pattern_display_unwrap.py  test_pattern_guardrails.py  test_pattern_hil.py  test_pattern_metrics_eval.py  test_pattern_model_routing.py  test_pattern_model_selector.py  test_pattern_prompt_handoff.py  test_pattern_prompt_overrides.py  test_pattern_query_rewriter.py  test_pattern_rag.py  test_retries_and_fallbacks.py  test_switch_agent.py  test_tool_runner_duckduckgo.py  test_utils.py
(+7 files in other folders)
